2023-12-06 Daniel Boyd <danieljboyd@icloud.com>

	* Source/NSDecimal.m:
	For compare, handle the case where one or both operands are zero.

2023-12-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMessagePort.m:
	* Source/NSSocketPort.m:
	Remove obsolete restriction on DO message length.  Add exception handler
	to invalidate port if we are unable to allocate more memory for a very
	large port message.

2023-11-23 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m:
	* Source/GSPrivate.h:
	* Headers/Foundation/NSBundle.m:
	Make +bundleForLibrary:version: behavior match documenation.
	Make +bundleForClass: call new private method to get library name
	and version, warnign if version cannot be determined.
	Mark +bundleForLibrary: as deprecated since we want a version.

2023-11-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/objc-load.m: Fix to get library path in standardised form to
	match code for getting executable path.

2023-11-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSVersionMacros.h: Added GS_UNIMPLEMENTED to
	mark methods and functions as unimplemented for compiler warnings
	and documentation. github #350

2023-11-14 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSURLRequest.m: Support deleting NSMutableURLRequest headers by
	calling setValue:forHTTPHeaderField: with nil value.
	* Headers/Foundation/NSURLRequest.h: Update method documentation.
	* Tests/base/NSURLRequest/basic.m: Extended NSMutableURLRequest tests.

2023-11-14 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Fix issue #292
	* Tests/base/NSFileManager/general.m: test for enumerator at URL
	* Source/NSNotificationCenter.m: fix indentation/style errors
	* Headers/GNUstepBase/GSBlocks.h: Add new macros for calling blocks
	which return a value.

2023-11-14 Richard Frith-Macdonald <rfm@gnu.org> Riccardo Mottola <rm@gnu.org>

	* Documentation/Base.gsdoc:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/install.texi: